unpackaged/main/default/objects/driveconnect__File__c/fields/driveconnect__Description__c.field-meta.xml
<CustomField>
    <fullName>driveconnect__Description__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>