unpackaged/main/default/objects/driveconnect__File__c/fields/driveconnect__File_Extension__c.field-meta.xml
<CustomField>
    <fullName>driveconnect__File_Extension__c</fullName>
    <description>The suffix added to the name of a file to indicate the file&#39;s layout.</description>
    <label>File Extension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>