unpackaged/main/default/objects/driveconnect__File__c/fields/driveconnect__File_Id__c.field-meta.xml
<CustomField>
    <fullName>driveconnect__File_Id__c</fullName>
    <description>The ID of the Salesforce Content Document record that the file is related to.</description>
    <label>File ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>