unpackaged/main/default/objects/driveconnect__File__c/fields/driveconnect__File_Location__c.field-meta.xml
<CustomField>
    <fullName>driveconnect__File_Location__c</fullName>
    <description>The location where the file is being stored.</description>
    <label>File Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>