unpackaged/main/default/objects/driveconnect__File__c/fields/driveconnect__File_Type__c.field-meta.xml
<CustomField>
    <fullName>driveconnect__File_Type__c</fullName>
    <description>The media type (also known as a Multipurpose Internet Mail Extensions or MIME type) of the file.</description>
    <label>File Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>