unpackaged/main/default/objects/driveconnect__File__c/fields/driveconnect__File_URL__c.field-meta.xml
<CustomField>
    <fullName>driveconnect__File_URL__c</fullName>
    <description>The url representing the link to the files location.</description>
    <label>File URL</label>
    <type>Url</type>
</CustomField>