unpackaged/main/default/objects/driveconnect__File__c/fields/driveconnect__Object__c.field-meta.xml
<CustomField>
    <fullName>driveconnect__Object__c</fullName>
    <description>The type of Salesforce object that the file is attached to.</description>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>