unpackaged/main/default/objects/driveconnect__File__c/fields/driveconnect__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>driveconnect__Record_Id__c</fullName>
    <description>The ID of the Salesforce record the file is attached to via a Content Document Link record.</description>
    <label>Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>