unpackaged/main/default/objects/driveconnect__File__c/fields/driveconnect__Title__c.field-meta.xml
<CustomField>
    <fullName>driveconnect__Title__c</fullName>
    <description>The is the full name of the file. The Salesforce Name field is limited to 80 characters and therefore file names longer than that are truncated. This field is able to store file names up to 255 characters.</description>
    <inlineHelpText>This field stores the full name of the file since the Salesforce Name field is limited to 80 characters.</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>